[package]
name = "srv"
version = "0.2.3"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"]}
sqlx = { version="0.8.6", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
serde = { version = "1.0.215", features = ["derive"] }
axum = { version = "0.8.4"}
axum_session = "0.16.0"
axum_session_auth = { version = "0.16.0"   }
axum_session_sqlx = { version = "0.5.0", features = [ "sqlite", "tls-rustls"] }
bcrypt = "0.17.0"
async-trait = {version = "0.1.88"  }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
tower-http = {version = "0.6.2", features = ["cors"]}